# aegisflow

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  conftest.py  main.py  pyproject.toml  requirements.txt
cache/: keys.py  semantic.py
control_plane/: audit.py  auth.py  models.py  registry.py
db/: seed.py  session.py
db/migrations/: env.py
db/migrations/versions/: 369216830108_add_fallback_model_to_tenant_policies.py  476894a88c89_add_index_api_keys_key_hash.py  8b77726a9977_initial_schema.py
docs/: NEXT_STEPS.md
experts/: executor.py
gateway/: app.py  middleware.py  proxy.py  routes.py  schemas.py  streaming.py
infra/: docker-compose.yml  prometheus.yml
infra/grafana/dashboards/: aegisflow.json
infra/grafana/provisioning/dashboards/: aegisflow.yml
masking/: detector.py  reconstructor.py  store.py  tokenizer.py
orchestration/: circuit_breaker.py  engine.py  fanout.py  synthesizer.py
registry/: health.py  model_registry.py  provider_registry.py
router/: capability.py  dag.py  intent.py  policies.py
scripts/: benchmark.py  seed_tenant.py  start_demo.sh
telemetry/: logging.py  metrics.py
tests/integration/: test_tenant_isolation.py
tests/unit/: test_cache_keys.py  test_masking.py  test_model_routing.py
