[project]
name = "aegisflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.48.0",
]
